# NSCBC-openfoam

./: .gitignore  NSCBC.md  README.md
01-A1/: README.md
01-A1/prism-NSCBC/: Allrun  log.blockMesh  log.rhoPimpleAdiabaticAcousticFoam-NSCBC
01-A1/rhoPimpleAdiabaticAcousticFoam-NSCBC/: EEqn.H  (+1 more)
01-A2-code_mixed/: log.txt
Workspace/: .9534193.out.swp  .B2.compileBoundaryCondition.sh.swp  .G1-sampling.sh.swp  00-clean.sh  00-quickTest  01-adaptCase.sh  01-playList.sh  02-decomposeFoam.sh  02-gitpush.sh  03-rsync.sh  03-runFoam.sh  04-specificFoam.sh  05-specif2Foam.sh  9543503.out  9543504.out  9543505.out  9550115.out  9550119.out  A1.clonerhoPimpleFoam.sh  A2.compilemyrhoPimpleFoam.sh  B1.cloneBoundaryCondition.sh  B2.compileBoundaryCondition.sh  B2.compileInletBoundaryCondition.sh  B2.compileOutletBoundaryCondition.sh  B2.compileTemperatureBoundaryCondition.sh  B2.compilevelocityOutletNSCBC.sh  B2.compilewaveTransmision.sh  B3.modifyBoundarycondition.md  B4.debuginfo.sh  B5.bugviw.sh  B5.cdsrc.sh  B5.fileviw.sh  B5.singularity.sh  C.extractTutorial.sh  C1.compilertwoPhaseMixtureThermo.sh  D-cloneadaptCase.sh  E-decomposePar-shockTube.sh  E-decomposePar.sh  E1.clonebarotropicCompressibilityModel.sh  E3.compilebarotropicCompressibilityModel.sh  (+9 more)
Workspace/projectUserDir/applications/reconstructParallel/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  reconstructParallel
Workspace/projectUserDir/applications/reconstructParallel/src/: main.cpp
doc/: NSCBC.md  inlet-NSCBC.md  terminal-gif.md
ref/: DEVONtech_storage
(+18040 files in other folders)
